force-app/main/default/objects/Partner_Partner_Association__c/Partner_Partner_Association__c.object-meta.xml
<CustomObject>
    <description>Partners associated with various partner and competitor accounts</description>
    <label>Account Partner Association</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Partner Partner Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Partner Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>