force-app/main/default/objects/Partner_Partner_Association__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any notes on relationship</description>
    <inlineHelpText>Any notes on relationship</inlineHelpText>
    <label>Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>