force-app/main/default/objects/Partner_Partner_Association__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>Partner Account Owner Full Name</description>
    <formula>Partner__r.Owner.Full_Name__c</formula>
    <inlineHelpText>Partner Account Owner Full Name</inlineHelpText>
    <label>Owner</label>
    <type>Text</type>
</CustomField>