force-app/main/default/objects/Partner_Partner_Association__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner of Ubiquity partner or competitor</description>
    <inlineHelpText>Partner of Ubiquity partner or competitor</inlineHelpText>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Linked Ubiquity Partner/Competitor</relationshipLabel>
    <relationshipName>Account_Partner_Associations1</relationshipName>
    <type>Lookup</type>
</CustomField>