force-app/main/default/objects/Partner_Partner_Association__c/fields/Partner_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Partner_Competitor__c</fullName>
    <description>Ubiquity partner or competitor account</description>
    <inlineHelpText>Ubiquity partner or competitor account</inlineHelpText>
    <label>Ubiquity Partner/Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Associated Competitors/Partners</relationshipLabel>
    <relationshipName>Account_Partner_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>