force-app/main/default/objects/Partner_Partner_Association__c/fields/Partner_Role__c.field-meta.xml
<CustomField>
    <fullName>Partner_Role__c</fullName>
    <description>Role partner plays for Ubiquity partner or competitor</description>
    <inlineHelpText>Role partner plays for Ubiquity partner or competitor</inlineHelpText>
    <label>Partner Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Advisory Firm</fullName>
            </value>
            <value>
                <fullName>Payroll Partner</fullName>
            </value>
            <value>
                <fullName>Payroll Integrator</fullName>
            </value>
            <value>
                <fullName>HCM Partner</fullName>
            </value>
            <value>
                <fullName>Referring Partner</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>